--- a/index.html
+++ b/index.html
@@ -1552,11 +1552,11 @@
       </div>
 
       <!-- Map + drawing canvas stacked -->
-      <div id="mudmapWrap" style="position:relative;width:100%;border-radius:8px;overflow:hidden;border:2px solid var(--blue-light);background:#e8e0d8;">
+      <div id="mudmapWrap" style="position:relative;width:100%;aspect-ratio:1/1;border-radius:8px;overflow:hidden;border:2px solid var(--blue-light);background:#e8e0d8;">
         <!-- Satellite tile layer canvas -->
         <canvas id="mudmapTileCanvas" style="position:absolute;top:0;left:0;width:100%;height:100%;"></canvas>
         <!-- Placeholder when no image -->
-        <div id="mudmapPlaceholder" style="width:100%;height:300px;display:flex;flex-direction:column;align-items:center;justify-content:center;color:var(--gray-mid);gap:8px;">
+        <div id="mudmapPlaceholder" style="width:100%;height:100%;min-height:300px;display:flex;flex-direction:column;align-items:center;justify-content:center;color:var(--gray-mid);gap:8px;">
           <span style="font-size:36px;">🛰️</span>
           <span style="font-size:13px;font-weight:600;">Enter site address above and tap Load Satellite View</span>
           <span style="font-size:11px;">Or draw directly on the blank canvas to create a manual mud map</span>
@@ -3866,7 +3866,7 @@ function initMudmap() {
   const ctx = canvas.getContext('2d');
 
   function resizeCanvas() {
-    const h = 300;
+    const h = document.getElementById('mudmapWrap')?.offsetWidth || 400;
     const imgData = canvas.toDataURL();
     canvas.width = wrap.offsetWidth * window.devicePixelRatio;
     canvas.height = h * window.devicePixelRatio;
@@ -4002,7 +4002,7 @@ function refillMudmapTiles() {
   if (mudmapCurrentLat === null) return;
   const wrap = document.getElementById('mudmapWrap');
   const w = wrap.offsetWidth;
-  const h = 300;
+  const h = document.getElementById('mudmapWrap')?.offsetWidth || 400;
   const zoom = mudmapCurrentZoom;
   const tileSize = 256;
 
@@ -4069,7 +4069,7 @@ function mudmapZoom(direction) {
   }
   const wrap = document.getElementById('mudmapWrap');
   const w = wrap.offsetWidth;
-  const h = 300;
+  const h = document.getElementById('mudmapWrap')?.offsetWidth || 400;
 
   // Save drawings
   const dc = document.getElementById('mudmapCanvas');
@@ -4123,7 +4123,7 @@ function loadMudmapSatellite() {
       // Use a static map image from OpenStreetMap
       const zoom = 18;
       const w = document.getElementById('mudmapWrap').offsetWidth;
-      const h = 300;
+      const h = document.getElementById('mudmapWrap')?.offsetWidth || 400;
       // Mapbox static (free tier) or fallback to tile
       const mapUrl = `https://maps.geoapify.com/v1/staticmap?style=osm-bright&width=${w}&height=${h}&center=lonlat:${lon},${lat}&zoom=${zoom}&apiKey=YOUR_KEY`;
 
@@ -4234,7 +4234,7 @@ function getMudmapDataUrl() {
 
   const wrap = document.getElementById('mudmapWrap');
   const w = wrap.offsetWidth;
-  const h = 300;
+  const h = document.getElementById('mudmapWrap')?.offsetWidth || 400;
 
   const out = document.createElement('canvas');
   out.width  = w;
